Finish first draft of discussion

--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -192,6 +192,9 @@ This process requires balanced batches which is achieved via clustering.
 The end result is an invariant representation which allows training a classifier
 that learns the correct relationship between $x$ and $y$.
 
+(MISSING HERE: ``a declaration confirming [the candidate's] contribution to each paper,
+especially in cases where the co-author is a supervisor''.)
+
 \section{Thesis structure}%
 \label{sec:thesis-structure}
 In \chapref{ch:related-work}, I present related work,
