--- a/main.tex
+++ b/main.tex
@@ -61,9 +61,9 @@ titlepage,numbers=noenddot,%1headlines,
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands (insert your own data here)
 % ****************************************************************************************************
-\newcommand{\myTitle}{Learning with Biased Data: Invariant Representations and Target Labels\xspace}
+\newcommand{\myTitle}{Learning with Biased Data:\\Invariant Representations and Target Labels\xspace}
 % \newcommand{\mySubtitle}{\xspace}
-\newcommand{\myDegree}{A thesis submitted for the degree of Doctor of Philosophy\xspace}
+\newcommand{\myDegree}{A thesis submitted for the degree of Doctor of Philosophy.\xspace}
 \newcommand{\myName}{Thomas Maximilian Kehrenberg\xspace}
 % \newcommand{\myProf}{Put name here\xspace}
 % \newcommand{\myOtherProf}{Put name here\xspace}
